[gd_scene load_steps=3 format=3 uid="uid://w3pm2e8diq40"]

[ext_resource type="Script" uid="uid://dawb0gk8e5xwr" path="res://addons/Rename/Manager.gd" id="1_bqbnu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbi6d"]
bg_color = Color(0.214616, 0.648424, 0.844072, 1)

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FileSystem CaseCleaner Tool"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Type"

[node name="OptionType" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
popup/item_0/text = "Folders"
popup/item_0/id = 0
popup/item_1/text = "Files"
popup/item_1/id = 1

[node name="buttonDir" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "SELECT DIRETORY
"

[node name="FileDialog" type="FileDialog" parent="MarginContainer/VBoxContainer/buttonDir"]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
option_count = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Directory"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Dir Path where the folders or files are located"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Naming Conventions"

[node name="CaseOption" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
popup/item_0/text = "PascalCase"
popup/item_0/id = 0
popup/item_1/text = "CamelCase"
popup/item_1/id = 1

[node name="MainButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mbi6d")
text = "Rename"
script = ExtResource("1_bqbnu")

[node name="feeback" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " "

[connection signal="pressed" from="MarginContainer/VBoxContainer/buttonDir" to="MarginContainer/VBoxContainer/MainButton" method="_on_button_dir_pressed"]
